[package]
name = "log_wrappers"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
slog = "2.3"
slog-term = "2.4"
hex = "0.3"
kvproto = { git = "https://github.com/gengliqi/kvproto.git", branch = "add-collect-peer-state-3.0.9" }
tikv_alloc = { path = "../tikv_alloc", default-features = false }
