[package]
name = "test_coprocessor"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
tikv_util = { path = "../tikv_util" }
tikv = { path = "../../", default-features = false }
tipb = { git = "https://github.com/pingcap/tipb.git" }
kvproto = { git = "https://github.com/gengliqi/kvproto.git", branch = "add-collect-peer-state-3.0.9" }
protobuf = "~2.0"
test_storage = { path = "../test_storage" }
futures = "0.1"
