[package]
name = "test_storage"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
tikv_util = { path = "../tikv_util" }
tikv = { path = "../../", default-features = false }
test_raftstore = { path = "../test_raftstore" }
kvproto = { git = "https://github.com/gengliqi/kvproto.git", branch = "add-collect-peer-state-3.0.9" }
futures = "0.1"
